--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dsx_joao</title>
+    <title>notícia</title>
    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>site do dxs_joao</h1>°
-    <img src="download.jpeg" alt="">
+    <header>
+        <h1>notícia do mengão</h1>°
+        <img src="download.jpeg" alt="">
+    </header>
+    <main>
+        <section>
+            <h2>Ángel Di María no flamengo</h2>
+            <img src="fla.jpeg" alt="">
+        
+        </section>
+        <section>
+            <h2> inflezlimente nao vai acontecer</h2>
+        </section>
+        <section>
+            <h2>Video</h2>
+        </section>
+  </section>      
+    </main>
 </body>
 </html>
